# stellarr

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  screenshots.example.json
.github/: SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: CONTRIBUTING.md  TESTING.md
docs/manual/: 01-introduction.md  02-quick-start.md  03-grid.md  04-block-options.md  05-midi.md  06-tuner.md  07-presets-scenes-states.md  08-system.md  09-privacy.md  CNAME  README.md  _sidebar.md  block-options.md  grid.md  index.html  index.md  midi.md  presets-scenes-states.md  privacy.md  quick-start.md  system.md  tuner.md
docs/superpowers/plans/: 2026-04-15-phase-1-design-tokens-and-theme.md
docs/superpowers/specs/: 2026-04-15-phase-0-design-direction.md  2026-04-17-midi-spec-cleanup-design.md  2026-04-17-settings-spec-cleanup-design.md  2026-04-17-tuner-spec-cleanup-design.md
docs/testing/: 01-preset-switching.md  02-audio-devices.md  03-plugin-management.md  04-grid-routing.md  05-scenes.md  06-tuner.md  07-midi.md  08-settings.md  09-loudness-metering.md  10-software-updates.md  README.md  index.md
engine/: MidiMapper.cpp  MidiMapper.h  PluginManager.cpp  PluginManager.h  PluginWindow.h  Stellarr.entitlements  StellarrBridge.cpp  StellarrBridge.h  StellarrEditor.cpp  StellarrEditor.h  StellarrPlatform.h  StellarrPlatform.mm  StellarrProcessor.cpp  StellarrProcessor.h  StellarrStandaloneApp.cpp  Telemetry.h  UpdaterShim.h  UpdaterShim.mm
engine/blocks/: AmpBlock.h  Block.cpp  Block.h  CabBlock.h  FxBlock.h  GainBlock.h  InputBlock.cpp  InputBlock.h  OutputBlock.h  PluginBlock.cpp  PluginBlock.h  VstBlock.h
engine/bridge/: GraphHandler.cpp  MidiHandler.cpp  ParamHandler.cpp  PresetHandler.cpp  SceneCapture.h  SceneHandler.cpp  UpdateHandler.cpp
engine/dsp/: KWeighting.h  LoudnessMeter.h
engine/test/: BlockTest.cpp  CopyPasteTest.cpp  GraphBasicTest.cpp  GraphEdgeTest.cpp  GraphRoutingTest.cpp  GraphTest.cpp  LoudnessMeterTest.cpp  MidiMapperTest.cpp  PassThroughTest.cpp  PeakLevelTest.cpp  PresetFileTest.cpp  PresetSwitchTest.cpp  SceneTest.cpp  SessionTest.cpp  TelemetryTest.cpp  TestUtils.h  TunerTest.cpp
engine/utils/: ToneGenerator.cpp  ToneGenerator.h
scripts/: dev-updater-serve.ts  package-lock.json  package.json  screenshots.sh  tsconfig.json  update-appcast.ts
scripts/lib/: appcast.ts
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ui/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
ui/src/__tests__/: setup.ts  smoke.test.ts
ui/src/assets/fonts/: fonts.css  satoshi.css
ui/src/bridge/: index.ts
ui/src/components/canvas/: BlockNode.module.css  BlockNode.tsx  Canvas.module.css  Canvas.tsx
ui/src/components/common/: Button.module.css  Button.tsx  IconButton.module.css  IconButton.tsx  Input.module.css  Input.tsx  InputGroup.module.css  InputGroup.tsx  MidiAssignDialog.module.css  MidiAssignDialog.tsx  MidiBadge.module.css  MidiBadge.tsx  OptionRow.module.css  OptionRow.tsx  Slider.module.css  Slider.tsx  TabBadge.module.css  TabBadge.tsx  Tablist.module.css  Tablist.tsx  Tag.module.css  Tag.tsx  ToggleSwitch.module.css  ToggleSwitch.tsx  Tooltip.module.css  Tooltip.tsx  colors.ts  constants.ts
ui/src/components/common/__tests__/: TabBadge.test.tsx  Tablist.test.tsx  Tag.test.tsx  colors.test.ts
ui/src/components/footer/: Footer.module.css  Footer.tsx
ui/src/components/grid/: BlockMenu.module.css  BlockMenu.tsx  ConnectionLayer.module.css  ConnectionLayer.tsx  DroppableCell.tsx  Grid.module.css  Grid.tsx  GridBlock.module.css  GridBlock.tsx  GridOverlay.module.css  GridOverlay.tsx  GridResizer.module.css  GridResizer.tsx  Palette.tsx  layout.ts
ui/src/components/header/: ConfirmDialog.module.css  ConfirmDialog.tsx  LoadingScreen.module.css  LoadingScreen.tsx  Logo.tsx  PresetBrowser.module.css  PresetBrowser.tsx  SceneRenameDialog.module.css  SceneRenameDialog.tsx  SystemStats.module.css  SystemStats.tsx
ui/src/components/midi/: MidiMonitor.module.css  MidiMonitor.tsx  MidiPage.module.css  MidiPage.tsx
ui/src/components/options/: ColorPicker.module.css  ColorPicker.tsx  LoudnessHistory.module.css  LoudnessHistory.tsx  LoudnessWindowPopup.module.css  LoudnessWindowPopup.tsx  MetricsSection.module.css  MetricsSection.tsx  OptionsMenu.tsx  OptionsPanel.module.css  OptionsPanel.tsx  ParametersSection.module.css  ParametersSection.tsx  PluginSection.module.css  PluginSection.tsx  PluginSelect.module.css  PluginSelect.tsx  SignalSection.module.css  SignalSection.tsx  StateSquare.module.css  StateSquare.tsx  StatesSection.module.css  StatesSection.tsx  TargetLoudnessControl.module.css  TargetLoudnessControl.tsx
ui/src/components/options/__tests__/: OptionsPanel.test.tsx
ui/src/components/settings/: MidiSettings.tsx  Row.module.css  Row.tsx  Settings.module.css  Settings.tsx  SoftwareUpdates.module.css  SoftwareUpdates.tsx
ui/src/components/settings/__tests__/: Row.test.tsx  SoftwareUpdates.test.tsx
ui/src/components/tuner/: StrobeBand.module.css  StrobeBand.tsx  Tuner.module.css  Tuner.tsx  TunerPanel.module.css  TunerPanel.tsx
ui/src/design/: tokens.css
ui/src/design/__tests__/: tokens.test.ts
ui/src/grid/: BlockMenu.tsx  ConnectionLayer.tsx  Grid.tsx  GridBlock.tsx  LoadingScreen.tsx  Logo.tsx  OptionsPanel.tsx  Palette.tsx  PluginSelect.tsx  PresetBrowser.tsx  Settings.tsx  Slider.tsx  SystemStats.tsx  layout.ts
ui/src/hooks/: useSyncTheme.ts  useSyncUpdateBadge.ts
ui/src/hooks/__tests__/: useSyncTheme.test.tsx
ui/src/store/: index.ts  theme.ts
ui/src/store/__tests__/: badges.test.ts  softwareUpdate.test.ts  theme.test.ts
ui/src/styles/: variables.css
web/: astro.config.mjs  package-lock.json  package.json
web/public/: appcast-staging.xml  appcast.xml
web/src/: content.config.ts
web/src/pages/: index.astro
web/src/styles/: fonts.css  global.css  starlight-theme.css
